Add new images to static and change default profile picture for user profile

--- a/netmanga_website/netmanga_website/templates/accounts/buy_coins.html
+++ b/netmanga_website/netmanga_website/templates/accounts/buy_coins.html
@@ -7,8 +7,7 @@
 <div class="coins-header-section">
     <div class="coins-header-section-info">
         <h1 class="coins-header-section-banner">
-            <img src="{% static '/img/netmanga_badge.png' %}">
-            NM Coins
+            <img src="{% static '/img/netmanga_NetManga_Coins_Banner.png' %}">
         </h1>
         <p class="coins-header-section-paragraph">
             Coins are a virtual good you can use to award chapters. Support NetManga and encourage your favorite Creators to keep making NetManga better.
