--- a/netmanga_website/static/css/main.css
+++ b/netmanga_website/static/css/main.css
@@ -4034,7 +4034,9 @@ li.subscribe-button {
   
 }
 
-
+.coins-header-section-banner img {
+  width: 100%
+}
 
 .coins-header-section-paragraph {
   max-width: 560px;
