--- a/netmanga_website/netmanga_website/templates/accounts/profile.html
+++ b/netmanga_website/netmanga_website/templates/accounts/profile.html
@@ -74,7 +74,7 @@
         {% else %}
         {% if request.user == profile.user %}
         <div class="creator-links">
-            <a class="btn btn-login btn-xl" href="{{ creator_terms_url }}">Become a Creator</a>
+            <a class="btn btn-login btn-xl" href="{{ creator_terms_url }}">Become a creator</a>
         </div>
         {% endif %}
         {% endif %}
