--- a/netmanga_website/netmanga_website/templates/accounts/new_chapter_form.html
+++ b/netmanga_website/netmanga_website/templates/accounts/new_chapter_form.html
@@ -7,7 +7,7 @@
 <br />
 <div class="row signup-mask">
     <div class="col-lg-10 mx-auto">
-        <h2>Add new Chapter</h2>
+        <h2>Add new chapter</h2>
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% if form.non_field_errors %}
@@ -28,7 +28,7 @@
                 {% endfor %}
                 
                 <div class="picture-upload">
-                    <label class="picture-upload-label">Upload Pages:</label>
+                    <label class="picture-upload-label">Upload pages:</label>
                     <input required name="images" type="file" multiple class="form-control" accept="image/*">
                 </div>
             </div>
@@ -36,7 +36,7 @@
             <br />
             <br />
             <div class="form-group">
-                <button class="btn btn-login btn-xl" type="submit">Create Chapter</button>
+                <button class="btn btn-login btn-xl" type="submit">Create chapter</button>
             </div>
             
         </form>
