center arrows in box

--- a/netmanga_website/static/css/main.css
+++ b/netmanga_website/static/css/main.css
@@ -1817,7 +1817,9 @@ h5.title:hover {
   transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out, border-color 0.35s ease-in-out;
 } 
 
-
+btn.btn-next .fa {
+  padding-bottom: 1px;
+}
 
 .btn-next:hover{
   color: #000;
