center arrows in box

--- a/netmanga_website/static/css/main.css
+++ b/netmanga_website/static/css/main.css
@@ -1817,7 +1817,11 @@ h5.title:hover {
   transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out, border-color 0.35s ease-in-out;
 } 
 
-btn.btn-next .fa {
+.fa-arrow-right {
+  font-size: 25px;
+}
+
+.fa-arrow-left {
   font-size: 25px;
 }
 
