--- a/netmanga_website/static/css/main.css
+++ b/netmanga_website/static/css/main.css
@@ -1953,7 +1953,7 @@ h5.title:hover {
   float: left;
 }
 
-.btn .fa.fa-thumbs-up, .fa.fa-thumbs-down {
+.btn .fa.fa-thumbs-up, .btn .fa.fa-thumbs-down {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
   font-size: 25px;
   cursor: pointer;
@@ -2059,7 +2059,7 @@ h5.title:hover {
     padding-bottom: 5px;
   }
 
-  .btn .fa {
+  .btn .fa.fa-thumbs-up, .btn .fa.fa-thumbs-down  {
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
     font-size: 20px;
     cursor: pointer;
@@ -2175,7 +2175,7 @@ h5.title:hover {
     padding-bottom: 5px;
   }
 
-  .btn .fa {
+  .btn .fa.fa-thumbs-up, .btn .fa.fa-thumbs-down  {
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
     font-size: 22px;
     cursor: pointer;
@@ -2291,7 +2291,7 @@ h5.title:hover {
     padding-bottom: 5px;
   }
 
-  .btn .fa {
+  .btn .fa.fa-thumbs-up, .btn .fa.fa-thumbs-down  {
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
     font-size: 25px;
     cursor: pointer;
@@ -2414,7 +2414,7 @@ h5.title:hover {
     padding-bottom: 5px;
   }
 
-  .btn .fa {
+  .btn .fa.fa-thumbs-up, .btn .fa.fa-thumbs-down  {
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
     font-size: 30px;
     cursor: pointer;
