--- a/netmanga_website/netmanga_website/templates/accounts/creator_terms.html
+++ b/netmanga_website/netmanga_website/templates/accounts/creator_terms.html
@@ -10,7 +10,7 @@
     <div class="col-lg-8 mx-auto">
         <p>
             We are glad that you are not only want to be part of our community, but also want to contribute to the community as a creator.
-            Before we you can start uploading your fisrt Manga or Webcomic please make sure you read the creator terms and accept them.
+            Before we you can start uploading your first Manga or Webcomic please make sure you read the creator terms and accept them.
             If you have further questions use the form on the
             <a href="{% url 'help:help' %}">help</a>
             page.
@@ -41,7 +41,7 @@
             </div>
             {% endfor %}
             <br />
-            <button class="btn btn-login btn-xl" type="submit">Become a Creator</button>
+            <button class="btn btn-login btn-xl" type="submit">Become a creator</button>
         </form>
         
     </div>
