change the way profile pictures are shown

--- a/netmanga_website/netmanga_website/templates/navbar.html
+++ b/netmanga_website/netmanga_website/templates/navbar.html
@@ -53,7 +53,7 @@
 
                         <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="{{request.user.profile.profile_picture.url}}" width="45" height="45" class="rounded-circle">
+                            <img src="{{request.user.profile.profile_picture.url}}" width="45" height="45" class="rounded-circle uploaded">
                         </button>
                         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
                             <a class="dropdown-item" href="{{ profile_url }}">Profile</a>
