--- a/netmanga_website/netmanga_website/templates/accounts/profile.html
+++ b/netmanga_website/netmanga_website/templates/accounts/profile.html
@@ -18,7 +18,7 @@
         
         {% if profile %}
             
-            <img src="{{profile.profile_picture.url}}" height=130 width=130 class="rounded-circle">
+            <img src="{{profile.profile_picture.url}}" height=130 width=130 class="rounded-circle uploaded">
                 
                 {% if profile.is_full_name_displayed %}
                 <h1>
