Issue #1 Forgot password Button working and reset Password added

--- a/netmanga_website/netmanga_website/templates/accounts/password_reset.html
+++ b/netmanga_website/netmanga_website/templates/accounts/password_reset.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 
-{% block title %} Login : : NETMANGA {% endblock %}
+{% block title %} Reset Password : : NETMANGA {% endblock %}
 
 {% block content %}
 <div class="form-section">
     <div class="row login-mask">
         <div class="col-lg-8 mx-auto">
-            <h5>Login and enjoy the experience</h5>
+            <h4>Forgot Password? Dont Worry.</h4>
+            <p>We will send you a URL to reset your password.
+                Please enter the email address you have registered for NETMANGA.</p>
             <form id="contactform" method="post">
                 {% csrf_token %}
                 
@@ -28,20 +30,19 @@
                 </div>
                 {% endfor %}
 
-                {% if not success %}
-                <div class="alert alert-danger" role="alert">
-                    Given Username or Password is incorrect
+                {% if success %}
+                <div class="alert alert-success" role="alert">
+                    An Email was sent to the email address above
                 </div>
                 {% endif %}
-
-                <br />
-                <a class="forgot-pw" href="{% url 'reset_password' %}">Forgot Password?</a>
-                <br />
+                {% if danger %}
+                <div class="alert alert-danger" role="alert">
+                    The given email address is not registered
+                </div>
+                {% endif %}
                 <br />
                 <div class="form-group">
-                    {% url 'accounts:signup' as signup_url %}
-                    <a class="btn btn-outline-login btn-xl" href="{{ signup_url }}">Sign Up</a>
-                    <button class="btn btn-login btn-xl" type="submit">Log In</button>
+                    <button class="btn btn-login btn-xl" type="submit">Send</button>
                 </div>
             </form>
         </div>
