--- a/netmanga_website/netmanga_website/templates/accounts/password_reset_confirm.html
+++ b/netmanga_website/netmanga_website/templates/accounts/password_reset_confirm.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 
-{% block title %} Login : : NETMANGA {% endblock %}
+{% block title %} Reset Password : : NETMANGA {% endblock %}
 
 {% block content %}
 <div class="form-section">
     <div class="row login-mask">
         <div class="col-lg-8 mx-auto">
-            <h5>Login and enjoy the experience</h5>
+            <h4>Enter new password</h4>
+            <p>Please enter your password twice, so we can verify you typed it in correctly.</p>
             <form id="contactform" method="post">
                 {% csrf_token %}
                 
@@ -28,20 +29,9 @@
                 </div>
                 {% endfor %}
 
-                {% if not success %}
-                <div class="alert alert-danger" role="alert">
-                    Given Username or Password is incorrect
-                </div>
-                {% endif %}
-
-                <br />
-                <a class="forgot-pw" href="{% url 'reset_password' %}">Forgot Password?</a>
-                <br />
                 <br />
                 <div class="form-group">
-                    {% url 'accounts:signup' as signup_url %}
-                    <a class="btn btn-outline-login btn-xl" href="{{ signup_url }}">Sign Up</a>
-                    <button class="btn btn-login btn-xl" type="submit">Log In</button>
+                    <button class="btn btn-login btn-xl" type="submit">Submit</button>
                 </div>
             </form>
         </div>
